# Tensegrity-Robotics

./: .gitignore  README.md  install.sh
docker/: Dockerfile
scripts/learning/src/evolution/: evolution_job_master.py
src/: CMakeLists.txt
src/core/: tgBaseRigid.cpp  tgSimView.cpp  tgSimView.h  tgSimViewGraphics.cpp  tgSimViewGraphics.h  tgSimulation.cpp  tgSimulation.h
src/dev/: CMakeLists.txt  README.md
src/dev/benchmark/: benchmark.py
src/dev/boxCube/: AppBoxCubeModel.cpp  BoxCubeModel.cpp  BoxCubeModel.h  CMakeLists.txt  JSON_Structure.cpp  LengthController.cpp  LengthController.h  README.md  SimpleController.cpp  SimpleController.h
src/dev/getting_nodes_test/: AppTwiceCubeModel.cpp  CMakeLists.txt  SimpleController.cpp  SimpleController.h  TwiceCubeModel.cpp  TwiceCubeModel.h
src/dev/gym-tensegrity/: README.md  setup.py
src/dev/gym-tensegrity/gym_tensegrity/: __init__.py
src/dev/gym-tensegrity/learning_scripts/: DQN_learning_stable_baselines_train_jumper.py  DQN_tensegrity_jumper_short_training.pkl
src/dev/json_build/: CMakeLists.txt
src/dev/jumper/: AppJumperModel.cpp  CMakeLists.txt  JSON_Structure.cpp  JSON_Structure.h  JumperModel.cpp  JumperModel.h  LengthController.cpp  LengthController.h  README.md
src/dev/jumper/util/: helper.sh
src/dev/leg/: AppLegModel.cpp  CMakeLists.txt  LengthController.cpp  LengthController.h  legModel.cpp  legModel.h
src/dev/legz/: AppLegzModel.cpp  CMakeLists.txt  JSON_Structure.cpp  JSON_Structure.h  LengthController.cpp  LengthController.h  LengthController_v0.cpp  README.md  TCP.cpp  legzModel.cpp  legzModel.h  v0_1.cpp  v0_2.cpp
src/dev/legz/gym-leg/: .gitignore  DQN_learning_baselines.py  README.md  setup.py
src/dev/legz/gym-leg/gym_leg/: __init__.py
src/dev/legz/gym-leg/gym_leg/envs/: __init__.py  leg_env.py  leg_model.py
src/dev/legz/gym-tensegrity/: .gitignore  README.md
src/dev/legz/gym-tensegrity/gym_tensegrity/: __init__.py
src/dev/legz/gym-tensegrity/gym_tensegrity/envs/: README.md  __init__.py  leg_env.py  leg_env_v1.py  leg_env_v2.py  leg_model.py
src/dev/legz/gym-tensegrity/learning_scripts/: DQN.py  DQN_learning_baseline.py  DQN_learning_baselines.py  DQN_learning_stable_baselines.py  DQN_learning_stable_baselines_train.py  README.md  deepq_tensegrity_leg.pkl  learning_model_modifications_report.txt  test.py
src/dev/legz/gym-tensegrity/learning_scripts/Tensegrity_leg_video/: openaigym.episode_batch.0.20151.stats.json
src/dev/legz/legz_util/: JSON_Structure.cpp  JSON_Structure.h
src/dev/legz/manual_control/: key.py
src/dev/legz/python_communication_test/: client  client.cpp  helper.sh  main.py  rotation_matrix.py  server.py
src/dev/robots_config/: SimpleController.h  model_templatecpp.txt  model_templateh.txt  simple_controller_templatecpp.txt  template.json  twiceCube.json  yaml_converter.py  yaml_test.yaml  yaml_test2.yaml
src/dev/robots_config/templates/: app_template.txt  app_template_benchmark.txt  cmake_lists_template.txt  gym_app_template.txt  gym_cmake_lists_template.txt  gym_controller_templatecpp.txt  gym_controller_templateh.txt  json_structure_templatecpp.txt  simple_controller_templatecpp.txt  simple_controller_templateh.txt
src/dev/simpleModelConverted/: AppSimpleModel.cpp  AppSimpleModelConverted.cpp  CMakeLists.txt  SimpleController.cpp  SimpleModel.cpp  SimpleModel.h
src/dev/sixBars/: AppsixBarsModel.cpp  CMakeLists.txt  LengthController.cpp  LengthController.h  sixBarsModel.cpp  sixBarsModel.h
src/dev/test/: AppsixBarsModel.cpp  CMakeLists.txt  LengthController.cpp  LengthController.h  ROS_Bridge.cpp  ROS_Bridge.h  sixBarsModel.cpp  sixBarsModel.h
src/dev/test/Communication_protocol_test/: client.py  data.json  helper.sh  main.py
src/dev/test/OpenAI test/: cartpole_model.pkl  test.py
src/dev/test/ROS_Package/ntrt_api/: CMakeLists.txt  package.xml
src/dev/test/ROS_Package/ntrt_api/scripts/: parser.py
src/dev/twiceCube/: AppTwiceCubeModel.cpp  CMakeLists.txt  SimpleController.cpp  SimpleController.h  TwiceCubeModel.cpp  TwiceCubeModel.h
src/dev/twiceCubeConverted/: AppTwiceCubeModel.cpp  CMakeLists.txt  JsonStructure.cpp  JsonStructure.h  SimpleController.cpp  SimpleController.h  TwiceCubeModel.cpp  TwiceCubeModel.h
src/dev/twiceCubeConvertedBenchmark/: AppTwiceCubeModel.cpp  SimpleController.cpp  SimpleController.h  TwiceCubeModel.cpp  TwiceCubeModel.h
src/dev/twiceCubeGym/: AppTwiceCubeGymModel.cpp  CMakeLists.txt  JsonStructure.cpp  JsonStructure.h  SimpleController.cpp  SimpleController.h  TwiceCubeGymModel.cpp  TwiceCubeGymModel.h
src/examples/: CMakeLists.txt
(+1876 files in other folders)
